[package]
name = "cch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
cargo-manifest = "0.17.0"
ipnet = "2.10.1"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
ratelimit = "0.10.0"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
toml = "0.8.19"
tower-cookies = "0.10.0"
